--- a/CareAmarillo/CareAmarillo.csproj
+++ b/CareAmarillo/CareAmarillo.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAu.designer.cs">
+      <DependentUpon>FormAu.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormCareAmarillo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +69,18 @@
     </Compile>
     <Compile Include="FormCareLogin.designer.cs">
       <DependentUpon>FormCareLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormEs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormEs.designer.cs">
+      <DependentUpon>FormEs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormHs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormHs.designer.cs">
+      <DependentUpon>FormHs.cs</DependentUpon>
     </Compile>
     <Compile Include="FormUniSearch.cs">
       <SubType>Form</SubType>
@@ -84,11 +102,20 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormAu.resx">
+      <DependentUpon>FormAu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormCareAmarillo.resx">
       <DependentUpon>FormCareAmarillo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormCareLogin.resx">
       <DependentUpon>FormCareLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEs.resx">
+      <DependentUpon>FormEs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormHs.resx">
+      <DependentUpon>FormHs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormUniSearch.resx">
       <DependentUpon>FormUniSearch.cs</DependentUpon>
@@ -117,6 +144,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="AuControl\" />
+    <Folder Include="EsControl\" />
+    <Folder Include="HsControl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
