--- a/CareAmarillo/CareAmarillo.csproj
+++ b/CareAmarillo/CareAmarillo.csproj
@@ -45,6 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuControl\UserControlAccountsAu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AuControl\UserControlAccountsAu.Designer.cs">
+      <DependentUpon>UserControlAccountsAu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AuControl\UserControlResetPassword.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AuControl\UserControlResetPassword.Designer.cs">
+      <DependentUpon>UserControlResetPassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseProcess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -88,6 +100,12 @@
     <Compile Include="FormUniSearch.designer.cs">
       <DependentUpon>FormUniSearch.cs</DependentUpon>
     </Compile>
+    <Compile Include="HsControl\UserControlHome.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HsControl\UserControlHome.Designer.cs">
+      <DependentUpon>UserControlHome.cs</DependentUpon>
+    </Compile>
     <Compile Include="Location.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -99,6 +117,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="AuControl\UserControlResetPassword.resx">
+      <DependentUpon>UserControlResetPassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -119,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormUniSearch.resx">
       <DependentUpon>FormUniSearch.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HsControl\UserControlHome.resx">
+      <DependentUpon>UserControlHome.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Location.resx">
       <DependentUpon>Location.cs</DependentUpon>
@@ -146,9 +170,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="AuControl\" />
     <Folder Include="EsControl\" />
-    <Folder Include="HsControl\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
