--- a/CareAmarillo/CareAmarillo.csproj
+++ b/CareAmarillo/CareAmarillo.csproj
@@ -117,6 +117,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="AuControl\UserControlAccountsAu.resx">
+      <DependentUpon>UserControlAccountsAu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AuControl\UserControlResetPassword.resx">
       <DependentUpon>UserControlResetPassword.cs</DependentUpon>
     </EmbeddedResource>
